...
        field.delegate = context.coordinator
        field.addTarget(context.coordinator, action: #selector(Coordinator.changed(_:)), for: .editingChanged)
        field.setContentHuggingPriority(.defaultLow, for: .horizontal)
        let toolbar = UIToolbar()
        toolbar.sizeToFit()
        let complete = UIBarButtonItem(title: "Complete Set", style: .plain, target: context.coordinator, action: #selector(Coordinator.complete))
        complete.accessibilityIdentifier = "fixed.keyboard.complete"
        toolbar.items = [complete, UIBarButtonItem(systemItem: .flexibleSpace),
            UIBarButtonItem(title: "Done", style: .done, target: context.coordinator, action: #selector(Coordinator.done))]
        field.inputAccessoryView = toolbar
        context.coordinator.field = field
        return field
    }
...
